tests/neg/hkprefix.scala
class Lambda[T] { class Tp }

object Test {
  def f(x: Lambda # Tp) = ???  // error
}